update java17 changes